--- a/PetsExchange.Users/UserApi.csproj
+++ b/PetsExchange.Users/UserApi.csproj
@@ -26,7 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ApiExtension\ApiExtension.csproj" />
     <ProjectReference Include="..\DataExtension\DataExtension.csproj" />
-    <ProjectReference Include="..\UserApiDto\UserApiContract.csproj" />
+    <ProjectReference Include="..\UserApiContract\UserApiContract.csproj" />
   </ItemGroup>
 
 </Project>
