--- a/UserApiClient/UserApiClient.csproj
+++ b/UserApiClient/UserApiClient.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <ProjectReference Include="..\ClientExtension\ClientExtension.csproj" />
+    <ProjectReference Include="..\UserApiContract\UserApiContract.csproj" />
   </ItemGroup>
 
 </Project>
