--- a/PetsExchange.Users/Properties/launchSettings.json
+++ b/PetsExchange.Users/Properties/launchSettings.json
@@ -1,23 +1,23 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:43444",
-      "sslPort": 44365
+      "applicationUrl": "http://localhost:64420/",
+      "sslPort": 44398
     }
   },
   "profiles": {
     "PetsExchange.Users": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7197;http://localhost:5197",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7197;http://localhost:5197",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
