MainApi - UserController Authorize Scheme

--- a/PetsExchangeApi/appsettings.json
+++ b/PetsExchangeApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtConfig": {
+    "Secret": "04lFVM9ObvsrfR36RjDae9O2qW8KmU1U",
+    "ExpiryTimeFrame": "00:00:30"
+  }
 }
