MainApi - AuthApi enpoint (login, register, refresh tokens)

--- a/AuthApiClient/AuthApiClient.csproj
+++ b/AuthApiClient/AuthApiClient.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AuthApiContract\AuthApiContract.csproj" />
+    <ProjectReference Include="..\ClientExtension\ClientExtension.csproj" />
+  </ItemGroup>
+
 </Project>
